objects/Veda_Message__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipLabel>Veda Messages</relationshipLabel>
        <relationshipName>Veda_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Veda Message</label>
    <nameField>
        <label>Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>